Finalize scenario publish course and implement scenario complete course.

--- a/Course.Identity/appsettings.json
+++ b/Course.Identity/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
+    "IncludeScopes": true,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Information"
       }
     },
     "Console": {
@@ -12,17 +12,12 @@
       }
     }
   },
-  "jwt": {
-    "secretKey": "35GadUCymdzSR6PY6SjLTpDWNS6snwZNrEvdCwfq",
-    "expiryMinutes": "5",
-    "issuer": "http://localhost:5000"
-  },
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
     "database": "Course-Identity",
-    "seed": false
+    "seed": true
   },
-  "rabbitmq" : {
+  "rabbitmq": {
     "Username": "guest",
     "Password": "guest",
     "VirtualHost": "/",
@@ -36,14 +31,14 @@
     "AutomaticRecovery": true,
     "TopologyRecovery": true,
     "Exchange": {
-        "Durable": true,
-        "AutoDelete": true,
-        "Type": "Topic"
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
     },
     "Queue": {
-        "AutoDelete": true,
-        "Durable": true,
-        "Exclusive": true
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
     }
- }
+  }
 }
