--- a/Course.Feedback/appsettings.json
+++ b/Course.Feedback/appsettings.json
@@ -1,8 +1,44 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "IncludeScopes": true,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database": "Course-Identity",
+    "seed": true
+  },
+  "rabbitmq": {
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672,
+    "Hostnames": [ "localhost" ],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
+  }
 }
